--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files
+/* Make the footer stick at the bottom of the page */
+@font-face {
+  font-family: 'Amsterdam Four';
+  src: url('assets/fonts/amsterdam-font/AmsterdamFourTtf-owMx4.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+  }
+  
+  .main-content {
+    min-height: 100%; /* Ensures it takes up the full height of the screen */
+    padding-bottom: 100px; /* Adjust for footer height */
+  }
+  
+  /* footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+  } */
