--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -2,7 +2,6 @@
   position: relative;
   padding: 60px 20px;
   background: linear-gradient(to right, #131415, #433f38, #645f55);
-  /* background: linear-gradient(to right, #0f2027, #203a43, #2c5364); */
   background-size: 400% 400%;
   animation: gradientBG 15s ease infinite;
   color: white;
@@ -25,15 +24,20 @@
 }
 
 .content h2 {
+  color: #eacf46;
   font-size: 2.5rem;
   margin-bottom: 1rem;
 }
 
 .content .intro {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   margin-bottom: 1rem;
   font-weight: 500;
   color: #e0e0e0;
+}
+
+.content p {
+  font-size: 1.5rem;
 }
 
 @keyframes fadeIn {
@@ -48,11 +52,62 @@
   }
 
   .content .intro {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 
   .content p {
-    font-size: 1rem;
+    font-size: 1.2rem;
     line-height: 1.6;
+  }
+}
+
+.skills-section {
+  animation: fadeIn 2s ease-in-out;
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  gap: 3rem;
+  flex-wrap: wrap;
+  z-index: 2;
+  position: relative;
+}
+
+.skills-category {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 2rem;
+  border-radius: 12px;
+  width: 300px;
+  text-align: center;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+  backdrop-filter: blur(8px);
+}
+
+.skills-category h2 {
+  margin-bottom: 1rem;
+  font-size: 1.8rem;
+  color: #eacf46;
+}
+
+.skills-category ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.skills-category li {
+  font-size: 1.2rem;
+  margin-bottom: 0.8rem;
+  color: #e0e0e0;
+}
+
+/* Responsive skills cards on mobile */
+@media (max-width: 768px) {
+  .skills-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .skills-category {
+    width: 90%;
   }
 }
