--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,7 +1,30 @@
-<!-- <ng-particles [params]="particlesOptions"></ng-particles> -->
-
-<section class="landing">
+<!-- <section class="landing">
   <h1>Hi, I'm Nouhaila 👩‍💻</h1>
   <p>Web Developer & Creative Engineer</p>
   <a [routerLink]="['/projects']" class="cta-button">View My Work</a>
+</section> -->
+
+<!-- <section class="landing">
+  <h1>Hi, I'm Nouhaila 👩‍💻</h1>
+  <span class="animated-subtitle">Passionate about clean code & elegant design</span>
+  <p>Web Developer & Creative Engineer</p>
+  <div class="buttons">
+    <a [routerLink]="['/projects']" class="cta-button">View My Work</a>
+    <a [routerLink]="['/about']" class="secondary-button">Learn About Me</a>
+  </div>
+</section> -->
+
+<section class="landing">
+  <h1>Hi, I'm Nouhaila 👩‍💻</h1>
+  <p class="subtitle">Passionate about clean code & elegant design</p>
+  <p>Web Developer & Creative Engineer</p>
+  <div class="buttons">
+    <a [routerLink]="['/projects']" class="cta-button">View My Work</a>
+    <a [routerLink]="['/about']" class="secondary-button">Learn About Me</a>
+  </div>
+  <div class="social-buttons">
+    <a href="https://www.linkedin.com/in/nouhailaerrakeb" target="_blank" class="social-link">LinkedIn</a>
+    <a href="https://github.com/nouhaerr" target="_blank" class="social-link">GitHub</a>
+  </div>
 </section>
+
