--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -2,7 +2,7 @@
   <div class="overlay"></div>
   <div class="content">
     <h2>About Me</h2>
-    <p class="intro">Hello! I'm Nouhaila 👩‍💻, a passionate web developer with a love for creating clean, responsive, and interactive web applications.</p>
+    <p class="intro">Hello! I'm Nouhaila 👩🏻‍💻, a passionate web developer with a love for creating clean, responsive, and interactive web applications.</p>
     <p>
       My journey began with curiosity and evolved into a craft. I specialize in building beautiful and functional web apps using Angular, Laravel, and more. I enjoy clean code, creative design, and learning new things every day, but I'm always excited to explore new areas in tech.
     </p>
