--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -23,7 +23,7 @@
       </div>
     
       <div class="col-7">
-        <h1>Hello, I'm Nouhaila 👩‍💻</h1>
+        <h1>Hello, I'm Nouhaila 👩🏻‍💻</h1>
         <p>Full-Stack Developer & Creative Engineer</p>
         <div class="buttons">
           <a [routerLink]="['/projects']" class="cta-button">View My Work</a>
