--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -1,6 +1,7 @@
 .footer {
     background-color: #d1d1cf;
-    color: #4f370d;
+     /* background-color: #f0e6b5; */
+     color: #4f370d;
     text-align: center;
     padding: 1rem;
     font-size: 0.9rem;
