--- a/src/app/pages/timeline/timeline.component.html
+++ b/src/app/pages/timeline/timeline.component.html
@@ -24,23 +24,32 @@
   
     <div *ngIf="currentSection === 'experiences'" class="d-flex p-3 flex-column gap-4 timeline">
       <div class="timeline-item p-4">
-        <h3>iNTELVALIA</h3>
+        <div class="timeline-header">
+          <img src="/assets/intelvalia_logo.jpeg" alt="Intelvalia Logo" class="company-logo">
+          <h3>iNTELVALIA</h3>
+        </div>
         <p><strong>Internship: Full-Stack Web Developer</strong></p>
-        <p>May 2025 -  November 2025 | Casablanca, Morocco</p>
+        <p>May 2025 -  Present | Casablanca, Morocco</p>
         <p>Developed a medical record management platform to digitalize patient files and improve healthcare data accessibility.
         <p>• Built the front-end with Angular (TypeScript, Bootstrap, Reactive Forms).</p>
         <p>• Designed and consumed RESTful APIs with Laravel for secure data management.</p>
         <p>• Implemented dynamic validated forms and a medical summary dashboard for doctors.</p>
       </div>
       <div class="timeline-item p-4">
-        <h3>RGPH 2024 (General Population and Housing Census)</h3>
+        <div class="timeline-header">
+          <img src="assets/rgph.jpg" alt="RGPH Logo" class="company-logo">
+          <h3>RGPH 2024 (General Population and Housing Census)</h3>
+        </div>
         <p><strong>Data Collector</strong></p>
         <p>August 2024 - September 2024 | Casablanca, Morocco</p>
         <p>• Collected detailed household data using digital tools.<br>
            • Collaborated to ensure timely and accurate reporting.</p>
       </div>
       <div class="timeline-item p-4">
-        <h3>BC SKILLS Group</h3>
+        <div class="timeline-header">
+          <img src="assets/bcSkills.png" alt="BC SKILLS Logo" class="company-logo">
+          <h3>BC SKILLS Group</h3>
+        </div>
         <p><strong>Internship: Full-Stack Developer</strong></p>
         <p>April 2022 - June 2022 | Safi, Morocco</p>
         <p>• Developed a clean, functional web app for inventory, sales, and purchasing using HTML, CSS, JS, and PHP.</p>
