--- a/src/styles.css
+++ b/src/styles.css
@@ -7,22 +7,19 @@
   font-style: normal;
 }
 
-body, html {
-    height: 100%;
-    margin: 0;
-  }
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
   
-  .main-content {
-    min-height: 100%; /* Ensures it takes up the full height of the screen */
-    padding-bottom: 100px; /* Adjust for footer height */
-  }
-  
-  /* footer {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-  } */
